--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "myproject",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "type": "module"
   },
   "devDependencies": {
     "vite": "^2.7.2"
